fix compile issue

--- a/app/src/main/res/layout/app_widget_resize_frame.xml
+++ b/app/src/main/res/layout/app_widget_resize_frame.xml
@@ -20,7 +20,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/widget_resize_shadow"
     android:foreground="@drawable/widget_resize_frame"
-    android:foregroundTint="?attr/workspaceTextColor"
+    android:foregroundTint="?attr/mico_workspaceTextColor"
     android:padding="0dp">
 
     <FrameLayout
@@ -34,7 +34,7 @@
             android:layout_gravity="left|center_vertical"
             android:layout_marginLeft="@dimen/widget_handle_margin"
             android:src="@drawable/ic_widget_resize_handle"
-            android:tint="?attr/workspaceTextColor" />
+            android:tint="?attr/mico_workspaceTextColor" />
 
         <!-- Top -->
         <ImageView
@@ -43,7 +43,7 @@
             android:layout_gravity="top|center_horizontal"
             android:layout_marginTop="@dimen/widget_handle_margin"
             android:src="@drawable/ic_widget_resize_handle"
-            android:tint="?attr/workspaceTextColor" />
+            android:tint="?attr/mico_workspaceTextColor" />
 
         <!-- Right -->
         <ImageView
@@ -52,7 +52,7 @@
             android:layout_gravity="right|center_vertical"
             android:layout_marginRight="@dimen/widget_handle_margin"
             android:src="@drawable/ic_widget_resize_handle"
-            android:tint="?attr/workspaceTextColor" />
+            android:tint="?attr/mico_workspaceTextColor" />
 
         <!-- Bottom -->
         <ImageView
@@ -61,7 +61,7 @@
             android:layout_gravity="bottom|center_horizontal"
             android:layout_marginBottom="@dimen/widget_handle_margin"
             android:src="@drawable/ic_widget_resize_handle"
-            android:tint="?attr/workspaceTextColor" />
+            android:tint="?attr/mico_workspaceTextColor" />
 
     </FrameLayout>
 </com.xiaomi.micolauncher.feature.appmainscreen.AppWidgetResizeFrame>
