--- a/app/src/main/res/layout/popup_container.xml
+++ b/app/src/main/res/layout/popup_container.xml
@@ -19,7 +19,7 @@
     android:id="@+id/deep_shortcuts_container"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="?attr/popupColorPrimary"
+    android:background="?attr/mico_popupColorPrimary"
     android:clipToPadding="false"
     android:clipChildren="false"
     android:elevation="@dimen/deep_shortcuts_elevation"
