--- a/app/src/main/res/layout/widgets_full_sheet.xml
+++ b/app/src/main/res/layout/widgets_full_sheet.xml
@@ -18,7 +18,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:theme="?attr/widgetsTheme" >
+    android:theme="?attr/mico_widgetsTheme" >
 
     <com.xiaomi.micolauncher.feature.appmainscreen.views.TopRoundedCornerView
         android:id="@+id/container"
