--- a/app/src/main/res/xml/device_profiles.xml
+++ b/app/src/main/res/xml/device_profiles.xml
@@ -18,157 +18,157 @@
 <profiles xmlns:launcher="http://schemas.android.com/apk/res-auto" >
 
     <profile
-        launcher:name="Super Short Stubby"
-        launcher:minWidthDps="255"
-        launcher:minHeightDps="300"
-        launcher:numRows="2"
-        launcher:numColumns="3"
-        launcher:numFolderRows="2"
-        launcher:numFolderColumns="3"
-        launcher:iconSize="48"
-        launcher:iconTextSize="13.0"
-        launcher:numHotseatIcons="3"
-        launcher:defaultLayoutId="@xml/default_workspace_3x3"
+        launcher:mico_name="Super Short Stubby"
+        launcher:mico_minWidthDps="255"
+        launcher:mico_minHeightDps="300"
+        launcher:mico_numRows="2"
+        launcher:mico_numColumns="3"
+        launcher:mico_numFolderRows="2"
+        launcher:mico_numFolderColumns="3"
+        launcher:mico_iconSize="48"
+        launcher:mico_iconTextSize="13.0"
+        launcher:mico_numHotseatIcons="3"
+        launcher:mico_defaultLayoutId="@xml/default_workspace_3x3"
         />
 
     <profile
-        launcher:name="Shorter Stubby"
-        launcher:minWidthDps="255"
-        launcher:minHeightDps="400"
-        launcher:numRows="3"
-        launcher:numColumns="3"
-        launcher:numFolderRows="3"
-        launcher:numFolderColumns="3"
-        launcher:iconSize="48"
-        launcher:iconTextSize="13.0"
-        launcher:numHotseatIcons="3"
-        launcher:defaultLayoutId="@xml/default_workspace_3x3"
+        launcher:mico_name="Shorter Stubby"
+        launcher:mico_minWidthDps="255"
+        launcher:mico_minHeightDps="400"
+        launcher:mico_numRows="3"
+        launcher:mico_numColumns="3"
+        launcher:mico_numFolderRows="3"
+        launcher:mico_numFolderColumns="3"
+        launcher:mico_iconSize="48"
+        launcher:mico_iconTextSize="13.0"
+        launcher:mico_numHotseatIcons="3"
+        launcher:mico_defaultLayoutId="@xml/default_workspace_3x3"
         />
 
     <profile
-        launcher:name="Short Stubby"
-        launcher:minWidthDps="275"
-        launcher:minHeightDps="420"
-        launcher:numRows="3"
-        launcher:numColumns="4"
-        launcher:numFolderRows="3"
-        launcher:numFolderColumns="4"
-        launcher:iconSize="48"
-        launcher:iconTextSize="13.0"
-        launcher:numHotseatIcons="4"
-        launcher:defaultLayoutId="@xml/default_workspace_4x4"
+        launcher:mico_name="Short Stubby"
+        launcher:mico_minWidthDps="275"
+        launcher:mico_minHeightDps="420"
+        launcher:mico_numRows="3"
+        launcher:mico_numColumns="4"
+        launcher:mico_numFolderRows="3"
+        launcher:mico_numFolderColumns="4"
+        launcher:mico_iconSize="48"
+        launcher:mico_iconTextSize="13.0"
+        launcher:mico_numHotseatIcons="4"
+        launcher:mico_defaultLayoutId="@xml/default_workspace_4x4"
         />
 
     <profile
-        launcher:name="Stubby"
-        launcher:minWidthDps="255"
-        launcher:minHeightDps="450"
-        launcher:numRows="3"
-        launcher:numColumns="4"
-        launcher:numFolderRows="3"
-        launcher:numFolderColumns="4"
-        launcher:iconSize="48"
-        launcher:iconTextSize="13.0"
-        launcher:numHotseatIcons="4"
-        launcher:defaultLayoutId="@xml/default_workspace_4x4"
+        launcher:mico_name="Stubby"
+        launcher:mico_minWidthDps="255"
+        launcher:mico_minHeightDps="450"
+        launcher:mico_numRows="3"
+        launcher:mico_numColumns="4"
+        launcher:mico_numFolderRows="3"
+        launcher:mico_numFolderColumns="4"
+        launcher:mico_iconSize="48"
+        launcher:mico_iconTextSize="13.0"
+        launcher:mico_numHotseatIcons="4"
+        launcher:mico_defaultLayoutId="@xml/default_workspace_4x4"
         />
 
     <profile
-        launcher:name="Nexus S"
-        launcher:minWidthDps="296"
-        launcher:minHeightDps="491.33"
-        launcher:numRows="4"
-        launcher:numColumns="4"
-        launcher:numFolderRows="4"
-        launcher:numFolderColumns="4"
-        launcher:iconSize="48"
-        launcher:iconTextSize="13.0"
-        launcher:numHotseatIcons="4"
-        launcher:defaultLayoutId="@xml/default_workspace_4x4"
+        launcher:mico_name="Nexus S"
+        launcher:mico_minWidthDps="296"
+        launcher:mico_minHeightDps="491.33"
+        launcher:mico_numRows="4"
+        launcher:mico_numColumns="4"
+        launcher:mico_numFolderRows="4"
+        launcher:mico_numFolderColumns="4"
+        launcher:mico_iconSize="48"
+        launcher:mico_iconTextSize="13.0"
+        launcher:mico_numHotseatIcons="4"
+        launcher:mico_defaultLayoutId="@xml/default_workspace_4x4"
         />
 
     <profile
-        launcher:name="Nexus 4"
-        launcher:minWidthDps="359"
-        launcher:minHeightDps="567"
-        launcher:numRows="5"
-        launcher:numColumns="4"
-        launcher:numFolderRows="4"
-        launcher:numFolderColumns="4"
-        launcher:iconSize="54"
-        launcher:iconTextSize="13.0"
-        launcher:numHotseatIcons="4"
-        launcher:defaultLayoutId="@xml/default_workspace_4x4"
+        launcher:mico_name="Nexus 4"
+        launcher:mico_minWidthDps="359"
+        launcher:mico_minHeightDps="567"
+        launcher:mico_numRows="5"
+        launcher:mico_numColumns="4"
+        launcher:mico_numFolderRows="4"
+        launcher:mico_numFolderColumns="4"
+        launcher:mico_iconSize="54"
+        launcher:mico_iconTextSize="13.0"
+        launcher:mico_numHotseatIcons="4"
+        launcher:mico_defaultLayoutId="@xml/default_workspace_4x4"
         />
 
     <profile
-        launcher:name="Nexus 5"
-        launcher:minWidthDps="335"
-        launcher:minHeightDps="567"
-        launcher:numRows="5"
-        launcher:numColumns="4"
-        launcher:numFolderRows="4"
-        launcher:numFolderColumns="4"
-        launcher:iconSize="54"
-        launcher:iconTextSize="13.0"
-        launcher:numHotseatIcons="4"
-        launcher:defaultLayoutId="@xml/default_workspace_4x4"
+        launcher:mico_name="Nexus 5"
+        launcher:mico_minWidthDps="335"
+        launcher:mico_minHeightDps="567"
+        launcher:mico_numRows="5"
+        launcher:mico_numColumns="4"
+        launcher:mico_numFolderRows="4"
+        launcher:mico_numFolderColumns="4"
+        launcher:mico_iconSize="54"
+        launcher:mico_iconTextSize="13.0"
+        launcher:mico_numHotseatIcons="4"
+        launcher:mico_defaultLayoutId="@xml/default_workspace_4x4"
         />
 
     <profile
-        launcher:name="Large Phone"
-        launcher:minWidthDps="406"
-        launcher:minHeightDps="694"
-        launcher:numRows="5"
-        launcher:numColumns="4"
-        launcher:numFolderRows="4"
-        launcher:numFolderColumns="4"
-        launcher:iconSize="54"
-        launcher:iconTextSize="13"
-        launcher:numHotseatIcons="4"
-        launcher:defaultLayoutId="@xml/default_workspace_4x5"
+        launcher:mico_name="Large Phone"
+        launcher:mico_minWidthDps="406"
+        launcher:mico_minHeightDps="694"
+        launcher:mico_numRows="5"
+        launcher:mico_numColumns="4"
+        launcher:mico_numFolderRows="4"
+        launcher:mico_numFolderColumns="4"
+        launcher:mico_iconSize="54"
+        launcher:mico_iconTextSize="13"
+        launcher:mico_numHotseatIcons="4"
+        launcher:mico_defaultLayoutId="@xml/default_workspace_4x5"
         />
 
     <profile
-        launcher:name="Nexus 7"
-        launcher:minWidthDps="575"
-        launcher:minHeightDps="904"
-        launcher:numRows="5"
-        launcher:numColumns="6"
-        launcher:numFolderRows="4"
-        launcher:numFolderColumns="5"
-        launcher:iconSize="64"
-        launcher:iconTextSize="14.4"
-        launcher:numHotseatIcons="7"
-        launcher:defaultLayoutId="@xml/default_workspace_5x6"
+        launcher:mico_name="Nexus 7"
+        launcher:mico_minWidthDps="575"
+        launcher:mico_minHeightDps="904"
+        launcher:mico_numRows="5"
+        launcher:mico_numColumns="6"
+        launcher:mico_numFolderRows="4"
+        launcher:mico_numFolderColumns="5"
+        launcher:mico_iconSize="64"
+        launcher:mico_iconTextSize="14.4"
+        launcher:mico_numHotseatIcons="7"
+        launcher:mico_defaultLayoutId="@xml/default_workspace_5x6"
         />
 
     <profile
-        launcher:name="Nexus 10"
-        launcher:minWidthDps="727"
-        launcher:minHeightDps="1207"
-        launcher:numRows="4"
-        launcher:numColumns="6"
-        launcher:numFolderRows="4"
-        launcher:numFolderColumns="5"
-        launcher:iconSize="76"
-        launcher:iconTextSize="14.4"
-        launcher:numHotseatIcons="7"
-        launcher:defaultLayoutId="@xml/default_workspace_5x6"
+        launcher:mico_name="Nexus 10"
+        launcher:mico_minWidthDps="727"
+        launcher:mico_minHeightDps="1207"
+        launcher:mico_numRows="4"
+        launcher:mico_numColumns="6"
+        launcher:mico_numFolderRows="4"
+        launcher:mico_numFolderColumns="5"
+        launcher:mico_iconSize="76"
+        launcher:mico_iconTextSize="14.4"
+        launcher:mico_numHotseatIcons="7"
+        launcher:mico_defaultLayoutId="@xml/default_workspace_5x6"
         />
 
     <profile
-        launcher:name="20-inch Tablet"
-        launcher:minWidthDps="1527"
-        launcher:minHeightDps="2527"
-        launcher:numRows="4"
-        launcher:numColumns="6"
-        launcher:numFolderRows="6"
-        launcher:numFolderColumns="6"
-        launcher:iconSize="100"
-        launcher:iconTextSize="20.0"
-        launcher:numHotseatIcons="7"
-        launcher:defaultLayoutId="@xml/default_workspace_5x6"
+        launcher:mico_name="20-inch Tablet"
+        launcher:mico_minWidthDps="1527"
+        launcher:mico_minHeightDps="2527"
+        launcher:mico_numRows="4"
+        launcher:mico_numColumns="6"
+        launcher:mico_numFolderRows="6"
+        launcher:mico_numFolderColumns="6"
+        launcher:mico_iconSize="100"
+        launcher:mico_iconTextSize="20.0"
+        launcher:mico_numHotseatIcons="7"
+        launcher:mico_defaultLayoutId="@xml/default_workspace_5x6"
         />
 
 </profiles>
