--- a/app/src/main/res/drawable/bg_notification_content.xml
+++ b/app/src/main/res/drawable/bg_notification_content.xml
@@ -14,7 +14,7 @@
      limitations under the License.
 -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="?attr/popupColorTertiary" />
+    <item android:drawable="?attr/mico_popupColorTertiary" />
 
     <item android:height="3dp" android:top="0dp">
         <shape>
