--- a/app/src/main/res/layout/all_apps_fast_scroller.xml
+++ b/app/src/main/res/layout/all_apps_fast_scroller.xml
@@ -32,6 +32,6 @@
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/search_container_all_apps"
         android:layout_marginEnd="@dimen/fastscroll_end_margin"
-        launcher:canThumbDetach="true" />
+        launcher:mico_canThumbDetach="true" />
 
 </merge>
