--- a/app/src/main/res/layout/all_apps_icon.xml
+++ b/app/src/main/res/layout/all_apps_icon.xml
@@ -21,8 +21,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:stateListAnimator="@animator/all_apps_fastscroll_icon_anim"
-    launcher:iconDisplay="all_apps"
-    launcher:centerVertically="true"
+    launcher:mico_iconDisplay="all_apps"
+    launcher:mico_centerVertically="true"
     android:paddingLeft="@dimen/dynamic_grid_cell_padding_x"
     android:paddingRight="@dimen/dynamic_grid_cell_padding_x" />
 
