--- a/app/src/main/res/layout/all_apps_tabs.xml
+++ b/app/src/main/res/layout/all_apps_tabs.xml
@@ -27,7 +27,7 @@
     android:clipToPadding="false"
     android:descendantFocusability="afterDescendants"
     android:paddingTop="@dimen/all_apps_header_top_padding"
-    launcher:pageIndicator="@+id/tabs" >
+    launcher:mico_pageIndicator="@+id/tabs" >
 
     <include layout="@layout/all_apps_rv_layout" />
 
