--- a/app/src/main/res/layout/hotseat.xml
+++ b/app/src/main/res/layout/hotseat.xml
@@ -16,13 +16,15 @@
 <com.xiaomi.micolauncher.feature.appmainscreen.Hotseat
     android:theme="@style/HomeScreenElementTheme"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:launcher="http://schemas.android.com/apk/res-auto">
+    xmlns:launcher="http://schemas.android.com/apk/res-auto"
+    android:layout_height="wrap_content"
+    android:layout_width="wrap_content">
 
     <com.xiaomi.micolauncher.feature.appmainscreen.CellLayout
         android:id="@+id/layout"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        launcher:containerType="hotseat"
+        launcher:mico_containerType="hotseat"
         android:importantForAccessibility="no" />
 </com.xiaomi.micolauncher.feature.appmainscreen.Hotseat>
