--- a/app/src/main/res/layout/workspace_screen.xml
+++ b/app/src/main/res/layout/workspace_screen.xml
@@ -20,5 +20,5 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:hapticFeedbackEnabled="false"
-    launcher:containerType="workspace" />
+    launcher:mico_containerType="workspace" />
 <!-- //oh21 celllayout的布局 -->
