--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -19,102 +19,102 @@
 <resources>
 
     <!-- Attributes used for launcher theme -->
-    <attr name="allAppsScrimColor" format="color" />
-    <attr name="allAppsInterimScrimAlpha" format="integer" />
-    <attr name="allAppsNavBarScrimColor" format="color" />
-    <attr name="popupColorPrimary" format="color" />
-    <attr name="popupColorSecondary" format="color" />
-    <attr name="popupColorTertiary" format="color" />
-    <attr name="isMainColorDark" format="boolean" />
-    <attr name="isWorkspaceDarkText" format="boolean" />
-    <attr name="workspaceTextColor" format="color" />
-    <attr name="workspaceShadowColor" format="color" />
-    <attr name="workspaceAmbientShadowColor" format="color"/>
-    <attr name="workspaceKeyShadowColor" format="color" />
-    <attr name="workspaceStatusBarScrim" format="reference" />
-    <attr name="widgetsTheme" format="reference" />
+    <attr name="mico_allAppsScrimColor" format="color" />
+    <attr name="mico_allAppsInterimScrimAlpha" format="integer" />
+    <attr name="mico_allAppsNavBarScrimColor" format="color" />
+    <attr name="mico_popupColorPrimary" format="color" />
+    <attr name="mico_popupColorSecondary" format="color" />
+    <attr name="mico_popupColorTertiary" format="color" />
+    <attr name="mico_isMainColorDark" format="boolean" />
+    <attr name="mico_isWorkspaceDarkText" format="boolean" />
+    <attr name="mico_workspaceTextColor" format="color" />
+    <attr name="mico_workspaceShadowColor" format="color" />
+    <attr name="mico_workspaceAmbientShadowColor" format="color"/>
+    <attr name="mico_workspaceKeyShadowColor" format="color" />
+    <attr name="mico_workspaceStatusBarScrim" format="reference" />
+    <attr name="mico_widgetsTheme" format="reference" />
 
     <!-- BubbleTextView specific attributes. -->
     <declare-styleable name="BubbleTextView">
-        <attr name="layoutHorizontal" format="boolean" />
-        <attr name="iconSizeOverride" format="dimension" />
-        <attr name="iconDisplay" format="integer">
+        <attr name="mico_layoutHorizontal" format="boolean" />
+        <attr name="mico_iconSizeOverride" format="dimension" />
+        <attr name="mico_iconDisplay" format="integer">
             <enum name="workspace" value="0" />
             <enum name="all_apps" value="1" />
             <enum name="folder" value="2" />
             <enum name="widget_section" value="3" />
             <enum name="shortcut_popup" value="4" />
         </attr>
-        <attr name="centerVertically" format="boolean" />
+        <attr name="mico_centerVertically" format="boolean" />
     </declare-styleable>
 
     <declare-styleable name="ShadowInfo">
-        <attr name="ambientShadowColor" format="color" />
-        <attr name="ambientShadowBlur" format="dimension" />
-        <attr name="keyShadowColor" format="color" />
-        <attr name="keyShadowBlur" format="dimension" />
-        <attr name="keyShadowOffset" format="dimension" />
+        <attr name="mico_ambientShadowColor" format="color" />
+        <attr name="mico_ambientShadowBlur" format="dimension" />
+        <attr name="mico_keyShadowColor" format="color" />
+        <attr name="mico_keyShadowBlur" format="dimension" />
+        <attr name="mico_keyShadowOffset" format="dimension" />
     </declare-styleable>
 
     <!-- PagedView specific attributes. These attributes are used to customize
          a PagedView view in XML files. -->
     <declare-styleable name="PagedView">
         <!-- The page indicator for this workspace -->
-        <attr name="pageIndicator" format="reference" />
+        <attr name="mico_pageIndicator" format="reference" />
     </declare-styleable>
 
     <!-- XML attributes used by default_workspace.xml -->
     <declare-styleable name="Favorite">
-        <attr name="className" format="string" />
-        <attr name="packageName" format="string" />
-        <attr name="container" format="string" />
-        <attr name="screen" format="string" />
-        <attr name="x" format="string" />
-        <attr name="y" format="string" />
-        <attr name="spanX" format="string" />
-        <attr name="spanY" format="string" />
-        <attr name="icon" format="reference" />
-        <attr name="title" format="string" />
-        <attr name="uri" format="string" />
+        <attr name="mico_className" format="string" />
+        <attr name="mico_packageName" format="string" />
+        <attr name="mico_container" format="string" />
+        <attr name="mico_screen" format="string" />
+        <attr name="mico_x" format="string" />
+        <attr name="mico_y" format="string" />
+        <attr name="mico_spanX" format="string" />
+        <attr name="mico_spanY" format="string" />
+        <attr name="mico_icon" format="reference" />
+        <attr name="mico_title" format="string" />
+        <attr name="mico_uri" format="string" />
     </declare-styleable>
 
     <declare-styleable name="Extra">
-        <attr name="key" format="string" />
-        <attr name="value" format="string" />
+        <attr name="mico_key" format="string" />
+        <attr name="mico_value" format="string" />
     </declare-styleable>
     <declare-styleable name="Include">
-        <attr name="workspace" format="reference" />
-        <attr name="folderItems" format="reference" />
+        <attr name="mico_workspace" format="reference" />
+        <attr name="mico_folderItems" format="reference" />
     </declare-styleable>
 
     <declare-styleable name="InsettableFrameLayout_Layout">
-        <attr name="layout_ignoreInsets" format="boolean" />
+        <attr name="mico_layout_ignoreInsets" format="boolean" />
     </declare-styleable>
 
     <declare-styleable name="InvariantDeviceProfile">
-        <attr name="name" format="string" />
-        <attr name="minWidthDps" format="float" />
-        <attr name="minHeightDps" format="float" />
+        <attr name="mico_name" format="string" />
+        <attr name="mico_minWidthDps" format="float" />
+        <attr name="mico_minHeightDps" format="float" />
 
-        <attr name="numRows" format="integer" />
-        <attr name="numColumns" format="integer" />
+        <attr name="mico_numRows" format="integer" />
+        <attr name="mico_numColumns" format="integer" />
         <!-- numFolderRows & numFolderColumns defaults to numRows & numColumns, if not specified -->
-        <attr name="numFolderRows" format="integer" />
-        <attr name="numFolderColumns" format="integer" />
+        <attr name="mico_numFolderRows" format="integer" />
+        <attr name="mico_numFolderColumns" format="integer" />
         <!-- numHotseatIcons defaults to numColumns, if not specified -->
-        <attr name="numHotseatIcons" format="integer" />
+        <attr name="mico_numHotseatIcons" format="integer" />
 
-        <attr name="iconSize" format="float" />
+        <attr name="mico_iconSize" format="float" />
         <!-- landscapeIconSize defaults to iconSize, if not specified -->
-        <attr name="landscapeIconSize" format="float" />
-        <attr name="iconTextSize" format="float" />
+        <attr name="mico_landscapeIconSize" format="float" />
+        <attr name="mico_iconTextSize" format="float" />
 
-        <attr name="defaultLayoutId" format="reference" />
-        <attr name="demoModeLayoutId" format="reference" />
+        <attr name="mico_defaultLayoutId" format="reference" />
+        <attr name="mico_demoModeLayoutId" format="reference" />
     </declare-styleable>
 
     <declare-styleable name="CellLayout">
-        <attr name="containerType" format="integer">
+        <attr name="mico_containerType" format="integer">
             <enum name="workspace" value="0" />
             <enum name="hotseat" value="1" />
             <enum name="folder" value="2" />
@@ -125,15 +125,15 @@
         <attr name="android:src" />
         <attr name="android:shadowColor" />
         <attr name="android:elevation" />
-        <attr name="darkTintColor" format="color"/>
+        <attr name="mico_darkTintColor" format="color"/>
     </declare-styleable>
 
     <declare-styleable name="RecyclerViewFastScroller">
-        <attr name="canThumbDetach" format="boolean" />
+        <attr name="mico_canThumbDetach" format="boolean" />
     </declare-styleable>
 
     <declare-styleable name="CustomAppWidgetProviderInfo">
-        <attr name="providerId" format="integer" />
+        <attr name="mico_providerId" format="integer" />
 
         <attr name="android:label" />
         <attr name="android:initialLayout" />
@@ -141,9 +141,9 @@
         <attr name="android:previewImage" />
         <attr name="android:resizeMode" />
 
-        <attr name="numRows" />
-        <attr name="numColumns" />
-        <attr name="numMinRows" format="integer" />
-        <attr name="numMinColumns" format="integer" />
+        <attr name="mico_numRows" />
+        <attr name="mico_numColumns" />
+        <attr name="mico_numMinRows" format="integer" />
+        <attr name="mico_numMinColumns" format="integer" />
     </declare-styleable>
 </resources>
