--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,32 +28,32 @@
     </style>
 
     <style name="BaseLauncherThemeWithCustomAttrs" parent="@style/BaseLauncherTheme">
-        <item name="allAppsScrimColor">#EAFFFFFF</item>
-        <item name="allAppsInterimScrimAlpha">46</item>
-        <item name="allAppsNavBarScrimColor">#66FFFFFF</item>
-        <item name="popupColorPrimary">#FFF</item>
-        <item name="popupColorSecondary">#F5F5F5</item> <!-- Gray 100 -->
-        <item name="popupColorTertiary">#E0E0E0</item> <!-- Gray 300 -->
-        <item name="isMainColorDark">false</item>
-        <item name="isWorkspaceDarkText">false</item>
-        <item name="workspaceTextColor">@android:color/white</item>
-        <item name="workspaceShadowColor">#B0000000</item>
-        <item name="workspaceAmbientShadowColor">#33000000</item>
-        <item name="workspaceKeyShadowColor">#44000000</item>
-        <item name="workspaceStatusBarScrim">@drawable/workspace_bg</item>
-        <item name="widgetsTheme">@style/WidgetContainerTheme</item>
+        <item name="mico_allAppsScrimColor">#EAFFFFFF</item>
+        <item name="mico_allAppsInterimScrimAlpha">46</item>
+        <item name="mico_allAppsNavBarScrimColor">#66FFFFFF</item>
+        <item name="mico_popupColorPrimary">#FFF</item>
+        <item name="mico_popupColorSecondary">#F5F5F5</item> <!-- Gray 100 -->
+        <item name="mico_popupColorTertiary">#E0E0E0</item> <!-- Gray 300 -->
+        <item name="mico_isMainColorDark">false</item>
+        <item name="mico_isWorkspaceDarkText">false</item>
+        <item name="mico_workspaceTextColor">@android:color/white</item>
+        <item name="mico_workspaceShadowColor">#B0000000</item>
+        <item name="mico_workspaceAmbientShadowColor">#33000000</item>
+        <item name="mico_workspaceKeyShadowColor">#44000000</item>
+        <item name="mico_workspaceStatusBarScrim">@drawable/workspace_bg</item>
+        <item name="mico_widgetsTheme">@style/WidgetContainerTheme</item>
     </style>
 
     <style name="LauncherTheme" parent="@style/BaseLauncherThemeWithCustomAttrs"></style>
 
     <style name="LauncherTheme.DarkText" parent="@style/LauncherTheme">
-        <item name="workspaceTextColor">#FF212121</item>
-        <item name="allAppsInterimScrimAlpha">128</item>
-        <item name="workspaceShadowColor">@android:color/transparent</item>
-        <item name="workspaceAmbientShadowColor">@android:color/transparent</item>
-        <item name="workspaceKeyShadowColor">@android:color/transparent</item>
-        <item name="isWorkspaceDarkText">true</item>
-        <item name="workspaceStatusBarScrim">@null</item>
+        <item name="mico_workspaceTextColor">#FF212121</item>
+        <item name="mico_allAppsInterimScrimAlpha">128</item>
+        <item name="mico_workspaceShadowColor">@android:color/transparent</item>
+        <item name="mico_workspaceAmbientShadowColor">@android:color/transparent</item>
+        <item name="mico_workspaceKeyShadowColor">@android:color/transparent</item>
+        <item name="mico_isWorkspaceDarkText">true</item>
+        <item name="mico_workspaceStatusBarScrim">@null</item>
     </style>
 
     <style name="LauncherThemeDark" parent="@style/LauncherTheme">
@@ -63,24 +63,24 @@
         <item name="android:textColorHint">#A0FFFFFF</item>
         <item name="android:colorControlHighlight">#A0FFFFFF</item>
         <item name="android:colorPrimary">#FF212121</item>
-        <item name="allAppsScrimColor">#EA212121</item>
-        <item name="allAppsInterimScrimAlpha">102</item>
-        <item name="allAppsNavBarScrimColor">#80000000</item>
-        <item name="popupColorPrimary">?android:attr/colorPrimary</item>
-        <item name="popupColorSecondary">#424242</item> <!-- Gray 800 -->
-        <item name="popupColorTertiary">#757575</item> <!-- Gray 600 -->
-        <item name="widgetsTheme">@style/WidgetContainerTheme.Dark</item>
-        <item name="isMainColorDark">true</item>
+        <item name="mico_allAppsScrimColor">#EA212121</item>
+        <item name="mico_allAppsInterimScrimAlpha">102</item>
+        <item name="mico_allAppsNavBarScrimColor">#80000000</item>
+        <item name="mico_popupColorPrimary">?android:attr/colorPrimary</item>
+        <item name="mico_popupColorSecondary">#424242</item> <!-- Gray 800 -->
+        <item name="mico_popupColorTertiary">#757575</item> <!-- Gray 600 -->
+        <item name="mico_widgetsTheme">@style/WidgetContainerTheme.Dark</item>
+        <item name="mico_isMainColorDark">true</item>
     </style>
 
     <style name="LauncherThemeDark.DarKText" parent="@style/LauncherThemeDark">
-        <item name="allAppsInterimScrimAlpha">25</item>
-        <item name="workspaceTextColor">#FF212121</item>
-        <item name="workspaceShadowColor">@android:color/transparent</item>
-        <item name="workspaceAmbientShadowColor">@android:color/transparent</item>
-        <item name="workspaceKeyShadowColor">@android:color/transparent</item>
-        <item name="isWorkspaceDarkText">true</item>
-        <item name="workspaceStatusBarScrim">@null</item>
+        <item name="mico_allAppsInterimScrimAlpha">25</item>
+        <item name="mico_workspaceTextColor">#FF212121</item>
+        <item name="mico_workspaceShadowColor">@android:color/transparent</item>
+        <item name="mico_workspaceAmbientShadowColor">@android:color/transparent</item>
+        <item name="mico_workspaceKeyShadowColor">@android:color/transparent</item>
+        <item name="mico_isWorkspaceDarkText">true</item>
+        <item name="mico_workspaceStatusBarScrim">@null</item>
     </style>
 
     <!--
@@ -89,9 +89,9 @@
     visible on various wallpapers.
     -->
     <style name="HomeScreenElementTheme">
-        <item name="android:colorEdgeEffect">?attr/workspaceTextColor</item>
-        <item name="android:textColorPrimary">?attr/workspaceTextColor</item>
-        <item name="android:textColorSecondary">?attr/workspaceTextColor</item>
+        <item name="android:colorEdgeEffect">?attr/mico_workspaceTextColor</item>
+        <item name="android:textColorPrimary">?attr/mico_workspaceTextColor</item>
+        <item name="android:textColorSecondary">?attr/mico_workspaceTextColor</item>
     </style>
 
     <!-- Theme for the widget container. Overridden on API 26. -->
@@ -136,17 +136,17 @@
     <!-- Icon displayed on the worksapce -->
     <style name="BaseIcon.Workspace">
         <item name="android:shadowRadius">2.0</item>
-        <item name="android:shadowColor">?attr/workspaceShadowColor</item>
-        <item name="ambientShadowColor">?attr/workspaceAmbientShadowColor</item>
-        <item name="ambientShadowBlur">2.5dp</item>
-        <item name="keyShadowColor">?attr/workspaceKeyShadowColor</item>
-        <item name="keyShadowBlur">1dp</item>
-        <item name="keyShadowOffset">.5dp</item>
+        <item name="android:shadowColor">?attr/mico_workspaceShadowColor</item>
+        <item name="mico_ambientShadowColor">?attr/mico_workspaceAmbientShadowColor</item>
+        <item name="mico_ambientShadowBlur">2.5dp</item>
+        <item name="mico_keyShadowColor">?attr/mico_workspaceKeyShadowColor</item>
+        <item name="mico_keyShadowBlur">1dp</item>
+        <item name="mico_keyShadowOffset">.5dp</item>
     </style>
 
     <!-- Theme for the popup container -->
     <style name="PopupItem">
-        <item name="android:colorControlHighlight">?attr/popupColorTertiary</item>
+        <item name="android:colorControlHighlight">?attr/mico_popupColorTertiary</item>
     </style>
 
     <!-- Drop targets -->
@@ -154,11 +154,11 @@
         <item name="android:drawablePadding">7.5dp</item>
         <item name="android:paddingLeft">16dp</item>
         <item name="android:paddingRight">16dp</item>
-        <item name="android:textColor">?attr/workspaceTextColor</item>
+        <item name="android:textColor">?attr/mico_workspaceTextColor</item>
         <item name="android:textSize">@dimen/drop_target_text_size</item>
         <item name="android:singleLine">true</item>
         <item name="android:ellipsize">end</item>
-        <item name="android:shadowColor">?attr/workspaceShadowColor</item>
+        <item name="android:shadowColor">?attr/mico_workspaceShadowColor</item>
         <item name="android:shadowDx">0.0</item>
         <item name="android:shadowDy">1.0</item>
         <item name="android:shadowRadius">4.0</item>
