--- a/app/src/main/res/xml/default_workspace_3x3.xml
+++ b/app/src/main/res/xml/default_workspace_3x3.xml
@@ -20,69 +20,69 @@
     <!-- Messaging, [All Apps], Dialer -->
 
     <resolve
-        launcher:container="-101"
-        launcher:screen="0"
-        launcher:x="0"
-        launcher:y="0" >
-        <favorite launcher:uri="#Intent;action=android.intent.action.MAIN;category=android.intent.category.APP_MESSAGING;end" />
-        <favorite launcher:uri="sms:" />
-        <favorite launcher:uri="smsto:" />
-        <favorite launcher:uri="mms:" />
-        <favorite launcher:uri="mmsto:" />
+        launcher:mico_container="-101"
+        launcher:mico_screen="0"
+        launcher:mico_x="0"
+        launcher:mico_y="0" >
+        <favorite launcher:mico_uri="#Intent;action=android.intent.action.MAIN;category=android.intent.category.APP_MESSAGING;end" />
+        <favorite launcher:mico_uri="sms:" />
+        <favorite launcher:mico_uri="smsto:" />
+        <favorite launcher:mico_uri="mms:" />
+        <favorite launcher:mico_uri="mmsto:" />
     </resolve>
 
     <!-- All Apps -->
 
     <resolve
-        launcher:container="-101"
-        launcher:screen="2"
-        launcher:x="2"
-        launcher:y="0" >
-        <favorite launcher:uri="#Intent;action=android.intent.action.DIAL;end" />
-        <favorite launcher:uri="tel:123" />
-        <favorite launcher:uri="#Intent;action=android.intent.action.CALL_BUTTON;end" />
+        launcher:mico_container="-101"
+        launcher:mico_screen="2"
+        launcher:mico_x="2"
+        launcher:mico_y="0" >
+        <favorite launcher:mico_uri="#Intent;action=android.intent.action.DIAL;end" />
+        <favorite launcher:mico_uri="tel:123" />
+        <favorite launcher:mico_uri="#Intent;action=android.intent.action.CALL_BUTTON;end" />
     </resolve>
 
     <!-- Bottom row -->
     <resolve
-        launcher:screen="0"
-        launcher:x="0"
-        launcher:y="-1" >
-        <favorite launcher:uri="#Intent;action=android.intent.action.MAIN;category=android.intent.category.APP_EMAIL;end" />
-        <favorite launcher:uri="mailto:" />
+        launcher:mico_screen="0"
+        launcher:mico_x="0"
+        launcher:mico_y="-1" >
+        <favorite launcher:mico_uri="#Intent;action=android.intent.action.MAIN;category=android.intent.category.APP_EMAIL;end" />
+        <favorite launcher:mico_uri="mailto:" />
     </resolve>
 
     <resolve
-        launcher:screen="0"
-        launcher:x="1"
-        launcher:y="-1" >
-        <favorite launcher:uri="#Intent;action=android.intent.action.MAIN;category=android.intent.category.APP_GALLERY;end" />
-        <favorite launcher:uri="#Intent;type=images/*;end" />
+        launcher:mico_screen="0"
+        launcher:mico_x="1"
+        launcher:mico_y="-1" >
+        <favorite launcher:mico_uri="#Intent;action=android.intent.action.MAIN;category=android.intent.category.APP_GALLERY;end" />
+        <favorite launcher:mico_uri="#Intent;type=images/*;end" />
     </resolve>
 
     <resolve
-        launcher:screen="0"
-        launcher:x="2"
-        launcher:y="-1" >
-        <favorite launcher:uri="#Intent;action=android.intent.action.MAIN;category=android.intent.category.APP_MARKET;end" />
-        <favorite launcher:uri="market://details?id=com.android.launcher" />
+        launcher:mico_screen="0"
+        launcher:mico_x="2"
+        launcher:mico_y="-1" >
+        <favorite launcher:mico_uri="#Intent;action=android.intent.action.MAIN;category=android.intent.category.APP_MARKET;end" />
+        <favorite launcher:mico_uri="market://details?id=com.android.launcher" />
     </resolve>
 
     <!-- Second last row -->
     <resolve
-        launcher:screen="0"
-        launcher:x="0"
-        launcher:y="-2" >
-        <favorite launcher:uri="#Intent;action=android.intent.action.MAIN;category=android.intent.category.APP_BROWSER;end" />
-        <favorite launcher:uri="http://www.example.com/" />
+        launcher:mico_screen="0"
+        launcher:mico_x="0"
+        launcher:mico_y="-2" >
+        <favorite launcher:mico_uri="#Intent;action=android.intent.action.MAIN;category=android.intent.category.APP_BROWSER;end" />
+        <favorite launcher:mico_uri="http://www.example.com/" />
     </resolve>
 
     <resolve
-        launcher:screen="0"
-        launcher:x="2"
-        launcher:y="-2" >
-        <favorite launcher:uri="#Intent;action=android.media.action.STILL_IMAGE_CAMERA;end" />
-        <favorite launcher:uri="#Intent;action=android.intent.action.CAMERA_BUTTON;end" />
+        launcher:mico_screen="0"
+        launcher:mico_x="2"
+        launcher:mico_y="-2" >
+        <favorite launcher:mico_uri="#Intent;action=android.media.action.STILL_IMAGE_CAMERA;end" />
+        <favorite launcher:mico_uri="#Intent;action=android.intent.action.CAMERA_BUTTON;end" />
     </resolve>
 
 </favorites>
