--- a/app/src/main/res/layout/system_shortcut.xml
+++ b/app/src/main/res/layout/system_shortcut.xml
@@ -17,8 +17,8 @@
 <com.xiaomi.micolauncher.feature.appmainscreen.shortcuts.DeepShortcutView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:launcher="http://schemas.android.com/apk/res-auto"
-    android:layout_width="@dimen/bg_popup_item_width"
-    android:layout_height="@dimen/bg_popup_item_height"
+    android:layout_width="@dimen/dp_240"
+    android:layout_height="@dimen/dp_70"
     android:theme="@style/PopupItem" >
 
     <com.xiaomi.micolauncher.feature.appmainscreen.BubbleTextView
@@ -27,20 +27,19 @@
         android:background="?android:attr/selectableItemBackground"
         android:gravity="start|center_vertical"
         android:textAlignment="viewStart"
-        android:paddingStart="@dimen/deep_shortcuts_text_padding_start"
+        android:paddingStart="@dimen/dp_78"
         android:paddingEnd="@dimen/popup_padding_end"
-        android:textSize="14sp"
-        android:textColor="?android:attr/textColorPrimary"
-        android:fontFamily="sans-serif"
+        android:textSize="@dimen/sp_24"
+        android:textColor="#cc000000"
         launcher:mico_iconDisplay="shortcut_popup"
         launcher:mico_layoutHorizontal="true"
         android:focusable="false" />
 
     <View
         android:id="@+id/icon"
-        android:layout_width="@dimen/system_shortcut_icon_size"
-        android:layout_height="@dimen/system_shortcut_icon_size"
-        android:layout_marginStart="@dimen/system_shortcut_margin_start"
+        android:layout_width="@dimen/dp_46"
+        android:layout_height="@dimen/dp_46"
+        android:layout_marginStart="@dimen/dp_20"
         android:layout_gravity="start|center_vertical"
         android:backgroundTint="?android:attr/textColorTertiary"/>
 
